@@ -1,3 +1,7 @@
+2014-03-05
+==========
+* Adding methods getVersion, getCoreVersion and isAtLeast.
+
 2014-02-27
 ==========
 * Adding a simple class for version numbering.
